# claude-code-responses-proxy

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: verify_count_tokens.py
scripts/fixtures/: token_count_cases.json
src/: __init__.py  app.py  codex_auth.py  config.py  config_model_map.py
src/errors/: __init__.py  anthropic_error.py
src/handlers/: __init__.py  anthropic_telemetry.py  count_tokens.py  messages.py  messages_common.py
src/mapping/: __init__.py  anthropic_to_openai.py  harmony.py  openai_stream_helpers.py  openai_stream_to_anthropic.py  openai_to_anthropic.py
src/middleware/: __init__.py  observability.py
src/observability/: __init__.py  logging.py  redaction.py  redaction_payloads.py  redaction_requests.py  redaction_shared.py
src/schema/: __init__.py  anthropic.py  openai.py
src/token_counting/: openai_count.py
src/transport/: __init__.py  lmstudio.py  openai_client.py  openai_stream.py  upstream_common.py
tests/: test_anthropic_telemetry.py  test_anthropic_to_openai.py  test_codex_auth.py  test_missing_codex_credentials.py  test_missing_credentials.py  test_model_map_config.py  test_openai_stream_to_anthropic.py  test_openai_to_anthropic.py  test_token_counting.py  test_transport_lmstudio_fallback.py  test_usage_normalization.py
(+40 files in other folders)
