[project]
name = "claude-code-responses-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "numpy>=2.1.0",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "spacy>=3.8.7,<4",
    "structlog>=25.5.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.40.0",
]
