[project]
name = "claude-code-responses-proxy"
version = "0.1.0"
description = "FastAPI proxy translating Anthropic Messages API calls to OpenAI Responses API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "structlog>=25.5.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]
pii = [
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "spacy>=3.8.7,<4",
]
